react reduxの例を組み込んだ

--- a/README.org
+++ b/README.org
@@ -22,10 +22,14 @@
 
 - jsxがbabelを必要とするため必要
 
-* react
+* React
 ** jsxなし
 
 [[file:non-jsx.html][jsxなしreact]]
+
+- コンソールで =React= を評価すると reactが持っているメソッド一覧が確認できる (createElementや useState等がある)
+- コンソールで =ReactDOM= を評価すると reactが持っているメソッド一覧が確認できる(renderはここにある)
+
 
 ** 仮想DOMを認識しよう
 
@@ -33,35 +37,32 @@
 
 - コンソールで確認すると、レンダリングの回数が理解できる
 
-* redux
+* Redux
 
 [[file:redux.html][Redux]]
 
 - コンソールで開いた後リロードして確認すると、storeの変遷が見れる
-- コンソールで src_<js>{Redux} を評価すると reduxが持っているメソッド一覧が確認できる（以下５つ）
+- コンソールで =Redux= を評価すると reduxが持っているメソッド一覧が確認できる（以下５つ）
 
 - combineReducers :: reducer合成用
 - createStore :: store作成用
 - applyMiddleware ::  sagaを使うときに使う
-- bindActionCreators :: （使ったこと無い）
-- compose :: (使ったこと無い)
+
+
+* React-Redux
+
+
 
 * redux-saga
 
 [[file:saga.html][Redux-Saga]]
 
 - コンソールで開いた後リロードして確認すると、storeの変遷が見れる
-- コンソールで src_<js>{ReduxSaga} を評価すると redux-sagaが持っているメソッド一覧が確認できる
+- コンソールで =ReduxSaga= を評価すると redux-sagaが持っているメソッド一覧が確認できる
 
 - runSaga :: これぐらいしか使わない
-- channel :: (使ったこと無い)
 - default :: nodeで使うときには createSagaMiddleware となる
-- detach :: (使ったこと無い)
 - effects :: put,call,take等の関数が入っている
-- eventChannel :: (使ったこと無い)
-- isEnd :: (使ったこと無い)
-- multicastChannel :: (使ったこと無い)
-- stdChannel ::  (使ったこと無い)
 
 
 
