--- a/README.org
+++ b/README.org
@@ -84,43 +84,22 @@
 * ライブラリ抽出
 
 - umd系の物を持ってくればいい
-- 下記一連の作業で最小の必要なものが./lib以下に置かれる
+- 下記一連の作業で最小の必要なものが =./lib= 以下に置かれる
 - そのへんのCDNに転がっているやつは古いことが多いので・・・
 
-** babel
 
 #+BEGIN_SRC sh :exports both
 mkdir lib
 npm init -y
 npm install babel-standalone
-cp node_modules/babel-standalone/babel.js lib
-#+END_SRC
-
-** react
-
-#+BEGIN_SRC sh :exports both
 npm install react react-dom
-cp node_modules/react/umd/react.production.min.js lib
-cp node_modules/react-dom/umd/react-dom.production.min.js lib
-#+END_SRC
-
-** redux
-
-#+BEGIN_SRC sh :exports both
 npm install redux
-cp node_modules/redux/dist/redux.min.js lib
-#+END_SRC
-
-** redux-saga
-
-#+BEGIN_SRC sh :exports both
 npm install redux-saga
-cp node_modules/redux-saga/dist/redux-saga.umd.min.js lib
-#+END_SRC
-
-** react-redux
-
-#+BEGIN_SRC sh :exports both
 npm install reactx-redux
-cp node_modules/redux-redux/dist/react-redux.min.js lib
+cp node_modules/babel-standalone/babel.js lib
+cp node_modules/react/umd/react.development.js lib
+cp node_modules/react-dom/umd/react-dom.development.js lib
+cp node_modules/redux/dist/redux.js lib
+cp node_modules/redux-saga/dist/redux-saga.umd.js lib
+cp node_modules/react-redux/dist/react-redux.js lib
 #+END_SRC
