--- a/README.org
+++ b/README.org
@@ -130,7 +130,9 @@
 - Reduxは Model を担当し、Action以外の変更を受け付けない。(つまりActionとはControllerからボタン以外を外した状態)
 - Sagaは疑似マルチスレッドにより全ての非同期処理を担当する。Storeに対するアクターモデルであるとも言える
 
-[[file:img/React-Redux-Saga.png][動作イメージ]]
+#+CAPTION: 動作イメージ
+#+NAME: fig:label
+file:img/React-Redux-Saga.png
 
 * index.html 作成スクリプト
 
