--- a/README.org
+++ b/README.org
@@ -169,6 +169,21 @@ TAIL
 #+END_SRC
 
 #+RESULTS:
+| babel(standalone)    |
+|                      |
+|                      |
+|                      |
+| PureComponent(React) |
+|                      |
+|                      |
+|                      |
+| PureComponent(React) |
+|                      |
+|                      |
+|                      |
+|                      |
+|                      |
+|                      |
 
 * 開発環境整備
 ** Visual Studio Code
