fetch中にtakeLeadingを使ってみた

--- a/README.org
+++ b/README.org
@@ -78,11 +78,17 @@
 	- cancel :: process kill に該当
 
 - とはいえ、 =fork(while(true){take("action");saga()}= 用にいくつか用意されている
-	- takeEvery :: 並列で処理を分岐(fork)した後、同名のイベントを待ち続ける(take)
-	- takeLatest :: 並列で処理を分岐(fork)した後、前回の処理を中断(cancel)し、同名のイベントを待ち続ける(take)
-	- =takeLatest(["AA","BB"],mySaga)= だと "AA" 処理中に "BB" が来たときに "AA" を中断する
-	- なので、先勝ちのtakeも書くことができる（ロックを考える必要があり、デフォルトはなさそう？）
-	- rootSagaの記述方法によって起動される順序、個数、回数が異なることに注意
+	- takeEvery :: 並列実行
+	- takeLatest :: 後勝ち実行
+	- takeLeading :: 先勝ち実行
+	- throttole :: 実行し始めたらミリ秒間遅延させる（チャタリング防止）
+- =takeLatest(["AA","BB"],mySaga)= だと "AA" 処理中に "BB" が来たときに "AA" を中断する
+
+- また同時実行のためのものもある
+	- race :: 一番早いやつを採用
+	- all :: 複数を並列実行し全部終了するまで待つ
+
+- rootSagaの記述方法によって起動される順序、個数、回数が異なることに注意
 
 ** Sagaでhttpアクセス
 
@@ -169,21 +175,6 @@ TAIL
 #+END_SRC
 
 #+RESULTS:
-| babel(standalone)    |
-|                      |
-|                      |
-|                      |
-| PureComponent(React) |
-|                      |
-|                      |
-|                      |
-| PureComponent(React) |
-|                      |
-|                      |
-|                      |
-|                      |
-|                      |
-|                      |
 
 * 開発環境整備
 ** Visual Studio Code
