nginxの場合を追加

--- a/README.org
+++ b/README.org
@@ -13,6 +13,7 @@
 	- =brew install  http-server= でインストールした http-serverを実行するか
 	- =npm install -g httpserver= でインストールした httpserverを実行するか
 	- =python -m http.server 3000= で実行
+  - =docker-compose up -d= でnginxが80で立ち上がる
 	- =npx serve= で良さそうな気もする(jsやってるんだからコレだろうな) -> [[http://localhost:5000/index.html][ここ]]をアクセス
 
 * Babel
